--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/chart/Chart.min.js"></script>
+    <script src="static/js/Chart.min.js"></script>
     <script type="text/javascript">
 
     // This is the speed in which the loop occurs
