--- a/templates/index.html
+++ b/templates/index.html
@@ -3,85 +3,96 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name='viewport' content='width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS from CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <title>{{ data.title }}</title>
+
+    <!-- Custom CSS for padding -->
+    <style>
+      body, html {
+        height: 100%;
+      }
+      .container {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+      #canvas_holder {
+        border: 1px solid #ddd;
+        padding: 20px;
+        background-color: #f9f9f9;
+      }
+    </style>
   </head>
 
   <body>
-  
+
     <div class="container">
       <div class="content">
         <br />
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
         <div class="col-xs-11 col-sm-12 col-md-12 col-lg-10" id="canvas_holder">
-          <canvas id="canvas" height="100%" width="100%"></canvas>
+          <canvas id="canvas" height="400" width="600" style="display: block; margin: 0 auto;"></canvas>
         </div>
       </div>
       <br />
-      <br />
-      <br />
-        <div class="container">
-          <p>
-          </p>
-        </div>
+      <div class="container">
+        <p></p>
+      </div>
     </div><!-- /.container -->
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/Chart.min.js"></script>
+    <!-- Bootstrap core JavaScript and jQuery from CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="text/javascript">
 
-    // This is the speed in which the loop occurs
-    loopSpeed = 5000
+    // Interval for data refresh (in milliseconds)
+    const loopSpeed = 5000;
 
-    // Every loopSpeed milliseconds, get API data (randomized with Python)
-    // Then draw a bar graph with the data.
+    // Fetch API data every loopSpeed milliseconds and draw a bar chart
+    $.get("/data", function(data) {
+        drawChart(data.set);
+    });
 
-
-      $.get( "/data", function( data ) {
-          drawChart(data.set)
-        });
-
-    
     function drawChart(set) {
-
-      var data = {
+      const data = {
           labels: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
           datasets: [
               {
-                  label: "Random Months",
-                  fillColor: "rgba(220,220,220,0.5)",
-                  strokeColor: "rgba(220,220,220,0.8)",
-                  highlightFill: "rgba(220,220,220,0.75)",
-                  highlightStroke: "rgba(220,220,220,1)",
+                  label: "Count",
+                  backgroundColor: "rgba(220,220,220,0.5)",
+                  borderColor: "rgba(220,220,220,0.8)",
+                  hoverBackgroundColor: "rgba(220,220,220,0.75)",
+                  hoverBorderColor: "rgba(220,220,220,1)",
                   data: set
               }
           ]
       };
 
-      var ctx = document.getElementById("canvas").getContext("2d");
-      
-      new Chart(ctx).Bar(data, {
-          responsive : true
+      const ctx = document.getElementById("canvas").getContext("2d");
+      new Chart(ctx, {
+          type: 'bar',
+          data: data,
+          options: {
+              responsive: true,
+              maintainAspectRatio: false
+          }
       });
-
-
     }
 
     </script>
